# petsim_4x4

./: CMakeLists.txt  README.md  action.cc  action.hh  construction.cc  detector.cc  detector.hh  generator.cc  plot_heatmap copy.py  plot_heatmap.py  run.hh  sim.cc
.ipynb_checkpoints/: detector-checkpoint.cc
include/: construction.hh  detector.hh  run.hh
src/: construction.cc  detector.cc  generator.cc  run.cc
